# rag-full-course

./: 00_01_data_ingestion_and_parsing.py  00_02_data_pdf.py  00_03_docs_load.py  00_04_csv_and_excel_parsing.py  00_05_json_parsing.py  02_data_pdf.py  05_json_parsing.py  06_db_data_parse.py  main.py  pyproject.toml  requirements.txt
data/: inngestion.txt  inngestion2.txt  para.docx
data/csv_excel/: products.csv  products.xlsx
data/db/: company.db
data/json/: sample_data.json
