[project]
name = "rag-full-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb",
    "faiss-cpu",
    "langchain",
    "langchain-community",
    "langchain-groq",
    "langchain-openai",
    "langgraph",
    "pandas",
    "python-dotenv",
    "tiktoken",
]
